20252021 commit (fixed bug json -> JavaBeans)